--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -2,10 +2,14 @@
 <link rel="stylesheet" href="{% static 'css/menu.css' %}">
 <div class="menu-container">
   <div class="menu-logo">
-    <img src="{% static 'logo.png' %}" alt="logo">
+    <a href="{% url 'recipes:home' %}"><img src="{% static 'logo.png' %}" alt="logo"></a>
   </div>
   <div class="menu-links">
-    <a href="#">Logout placeholder?</a>
-    <a href="{% url 'profiles:profile' %}">My Profile</a>
+    {% if user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout?</a>
+    <a href="{% url 'profiles:profile' %}">My Profile!</a>
+    {% else %}
+    <a href="{% url 'login' %}">Login!?</a>
+    {% endif %}
   </div>
 </div>
