--- a/src/profiles/templates/profiles/profile.html
+++ b/src/profiles/templates/profiles/profile.html
@@ -1,11 +1,17 @@
 {% load static %}
 {% include "menu.html" %}
-<h1>Placeholder!</h1>
-<h2>Details: {{object.user.username}}</h2>
-<b>Name: </b> {{object.name}} <br>
-<b>Recipes: </b> {{object.recipes}} <br>
-<b>About Me: </b> {{object.about_me}} <br>
+<h1>Your profile! Whoopi!</h1>
+<h2>Details: {{user.username}}</h2>
+<b>Recipes Created: </b>{% for recipe in user.profile.recipes.all %}
+<a href="{{recipe.get_absolute_url}}">
+  <br><b>{{ recipe.name }}</b>
+</a>
+{% empty%}
+<b>Create Some!</b>
+{% endfor %} <br>
+<br><b>About Me: </b> {{user.profile.about_me}} <br><br>
 
-<img src="{{object.avatar.url}}" width="200" height="300" />
+<a href="https://will-maple.github.io/Portfolio-Website/"><img src="{{user.profile.avatar.url}}" height="450" /></a>
+<br>
 <br>
 <a href="{% url 'recipes:home' %}">click me to go back</a>
