--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -6,10 +6,15 @@
   </div>
   <div class="menu-links">
     {% if user.is_authenticated %}
-    <a href="{% url 'logout' %}">Logout?</a>
+    <a href="{% url 'recipes:add' %}">Add Recipe</a>
     <a href="{% url 'profiles:profile' %}">My Profile!</a>
+    <a href="{% url 'recipes:graphs' %}">Data Visuals</a>
+    <a href="{% url 'logout' %}">Logout?</a>
+    <a href="{% url 'me' %}">The Creator</a>
     {% else %}
+    <a href="{% url 'recipes:graphs' %}">Data Visuals</a>
     <a href="{% url 'login' %}">Login!?</a>
+    <a href="{% url 'me' %}">The Creator</a>
     {% endif %}
   </div>
 </div>
