--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -1,4 +1,5 @@
 {% load static %}
+<link rel="shortcut icon" type="image/x-icon" href="{% static '/favicon.ico %}">
 <link rel="stylesheet" href="{% static 'css/menu.css' %}">
 <div class="menu-container">
   <div class="menu-logo">
